--- a/src/Component/SlideSwip/index.module.css
+++ b/src/Component/SlideSwip/index.module.css
@@ -1,4 +1,5 @@
 #section1{
+    font-family: "Tajawal", sans-serif;
     .par1{
          .babyCarecenter{
     background-color: rgba(37, 37, 37,0.9);
