--- a/src/Component/Header/index.module.css
+++ b/src/Component/Header/index.module.css
@@ -1,10 +1,12 @@
 .header{
    .part1{
-    background-color: #b87e12;
+    background-color:#e8b33c;
+    color: rgb(71, 71, 71);
     padding: 8px;
+
     p{
-        font-size:1.5rem;
-        font-weight:400 ;
+        font-size:1.1rem;
+        font-weight: 600;
     }
    }
    .part2{
