--- a/src/Component/SwiperLink/index.module.css
+++ b/src/Component/SwiperLink/index.module.css
@@ -1,10 +1,16 @@
-#owl{
-    width: 408px;
-    height: 190px;
-    h3{
-        font-size: 1.5rem;
-        color: #734079;
-    }
+.owl {
+  width: 408px;
+  height: 190px;
+  h3 {
+    font-size: 1.5rem;
+    color: #734079;
+  }
 }
 
-  
+/* .swiper-slide-active .owl {
+  border-color: #734079 !important;
+  background-color: #734079;
+}
+ */
+
+
