--- a/src/Component/SlideSwip/index.module.css
+++ b/src/Component/SlideSwip/index.module.css
@@ -24,6 +24,14 @@
     }
   
  
-}     
+}   
+#bgimg{
+    background-position: 50%;
+    background-size: cover;
+    min-height: 700px;
+    max-height: 90%;
+    z-index: 1;
+    position: relative;
+}  
   
   
