--- a/src/Component/ٍSliderTeam/index.module.css
+++ b/src/Component/ٍSliderTeam/index.module.css
@@ -1,8 +1,43 @@
-#information {
+/* #information {
     opacity: 0;
     transition: all 0.4s ease-in-out;
-  }
+  } */
   
-  .coverteam:hover #information {
+  /* .coverteam:hover #information {
     opacity: 1;
+  } */
+  .coverteam{
+    /* box-shadow: 0 0 45px rgba(0, 0, 0, .08); */
+    h3{
+      font-size: 1.25rem;
+    }
+    p{
+      font-size: .875em;
+     color: #808b8d;
+    }
+    #icon{
+      border-bottom: 1px solid #734079;
+      color:"#734079";
+    }
+    
+   #iconsteam{
+      margin-top: -19px;
+      z-index: 3;
+
+    }
+    #coverimgzoom{
+      transition: border 0.3s ease, transform 0.3s ease;
+      overflow: hidden;  
+      img{
+        transition: border 0.3s ease, transform 0.3s ease;
+        border: 3px solid #808b8d;
+
+      } 
+     }
+     #coverimgzoom:hover {
+      border: none;
+    }
+    #coverimgzoom img:hover {
+      transform: scale(1.1);
+    }
   }
