--- a/src/Component/SlideSwip/index.module.css
+++ b/src/Component/SlideSwip/index.module.css
@@ -2,7 +2,9 @@
     font-family: "Tajawal", sans-serif;
     .par1{
          .babyCarecenter{
-    background-color: rgba(37, 37, 37,0.9);
+    /* background-color: rgba(37, 37, 37,0.9); */
+    background-color: #e8b33c;
+   
    
    } button{
         background-color: #82c419;
