--- a/src/Pages/Homepage/index.module.css
+++ b/src/Pages/Homepage/index.module.css
@@ -46,7 +46,7 @@
       transition: none;
     }
   }
-  #imgmom {
+  /* #imgmom {
     min-width: 400px;
     max-width: 50%;
     min-height: 497px;
@@ -56,9 +56,10 @@
       width: 100%;
       height: 100%;
     }
-  }
+  } */
   #sectionAbout {
     padding: 120px 0;
+
   }
   #about {
     min-height: 429px;
@@ -68,9 +69,9 @@
     background-color: white;
     border:  2px solid #808b8d;
     margin: 25px 0;
-    h2 {
+    h6{
       
-      font-size: 22pt;
+      font-size: 14pt;
       font-weight: 600;
       color:#734079;
     }
@@ -79,14 +80,23 @@
       color: #323232;
 
     }
-    span {
-      color: #734079;
+    h4{
+      font-size: 30px;
       font-weight: 600;
+      color: #e8b33c;
+      span{
+        color: #734079;
+      }
     }
-    /* hr {
+    button {
+      border: none;
+      font-weight: 600;
+      background-color: #734079;
+    }
+    hr {
       border: 1px solid #734079;
       width: 20%;
-    } */
+    }
   }
   #Babysitters {
     padding: 70px;
